completed everything except animation

--- a/index.html
+++ b/index.html
@@ -3,10 +3,29 @@
   <head>
     <title>New_Blog</title>
     <link href='scss/style.css' rel='stylesheet' type='text/css'>
+    <link href='css/font-awesome.min.css' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <div class='container'>
-      <div>class</div>
+      <div class='navbar-container'>
+        <div class='navbar-toggle'></div>
+        <ul class='navbar'>
+          <li>
+            <a href='#'>home</a>
+          </li>
+          <li>
+            <a href='#'>about</a>
+          </li>
+          <li>
+            <a href='#'>contact</a>
+          </li>
+          <li>
+            <a href='#'>feedback</a>
+          </li>
+        </ul>
+      </div>
     </div>
+    <script src='js/jquery.min.js'></script>
+    <script src='js/myfunctions.js'></script>
   </body>
 </html>
