mobile navigation hover almost ready

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
           </li>
         </ul>
       </div>
+      <div class='navigation-panel'>
+        <div class='bars'>
+          <span class='letter n'>N</span>
+          <span class='letter v'>V</span>
+        </div>
+      </div>
     </div>
     <script src='js/jquery.min.js'></script>
     <script src='js/myfunctions.js'></script>
